--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Library for controlling WiZ devices via UDP",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "compile": "tsc",
     "build": "tsc",
@@ -13,9 +14,17 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@types/chai": "^4.1.2",
     "@types/ip": "^0.0.30",
+    "@types/mocha": "^2.2.48",
     "@types/node": "^9.6.1",
     "@types/pino": "^4.7.1",
+    "@types/sinon": "^4.3.0",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.4",
+    "sinon": "^4.4.8",
+    "ts-mocha": "^1.1.0",
+    "tslint": "^5.9.1",
     "typescript": "^2.8.1"
   },
   "dependencies": {
