--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "private": true,
   "devDependencies": {
     "@types/chai": "^4.1.2",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/ip": "^0.0.30",
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.6.1",
     "@types/pino": "^4.7.1",
     "@types/sinon": "^4.3.0",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^5.0.4",
     "sinon": "^4.4.8",
     "ts-mocha": "^1.1.0",
