--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 # https://hub.docker.com/r/library/node/tags/
 image: node:latest
 
-.ssh_key_add: &ssh_key
+.ssh_key_add_build: &ssh_key_build
   before_script:
     ##
     ## Install ssh-agent if not already installed, it is required by Docker.
@@ -21,7 +21,6 @@ image: node:latest
     ## without extra base64 encoding.
     ## https://gitlab.com/gitlab-examples/ssh-private-key/issues/1#note_48526556
     ##
-    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - echo "$GITLAB_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
 
     ##
@@ -45,7 +44,7 @@ stages:
   - deploy
 
 test:
-  <<: *ssh_key
+  <<: *ssh_key_build
   stage: test
   script:
     - npm install
