--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,18 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
+      "*": [
+        "node_modules/*",
+        "src/types/*"
+      ]
     },
-    "lib": ["es6", "esnext"],
+    "lib": [
+      "es6",
+      "esnext"
+    ],
     "declaration": true
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*"
+  ]
 }
