--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wiz-local-control",
+  "name": "@heleon19/wiz-local-control",
   "version": "2.0.0",
   "description": "Library for controlling WiZ devices via UDP",
   "main": "dist/index.js",
@@ -9,10 +9,9 @@
     "build": "tsc",
     "test": "ts-mocha src/**/*.spec.ts"
   },
-  "repository": "git@gitlab.com:wizlighting/wiz-local-control.git",
+  "repository": "git@github.com:heleon19/wiz-local-control.git",
   "author": "Gleb Vodovozov, Eugene Khrapykin",
   "license": "MIT",
-  "private": true,
   "devDependencies": {
     "@types/chai": "^4.2.22",
     "@types/ip": "^1.1.0",
@@ -29,7 +28,7 @@
   },
   "dependencies": {
     "class-validator": "^0.13.1",
-    "ip": "^1.1.5",
-    "pino": "^7.2.0"
+    "ip": "^1.1.8",
+    "pino": "^8.7.0"
   }
 }
